# oxc-coverage-instrument

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  _typos.toml  coverage.json  deny.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release-npm.yml
benches/: instrument.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_test.rs
examples/: instrument.rs  profile.rs  profile_detail.rs
napi/: Cargo.toml  package.json  test.mjs  vitest.d.ts  vitest.js
napi/npm/darwin-arm64/: README.md  package.json
napi/npm/darwin-x64/: README.md  package.json
napi/npm/linux-arm64-gnu/: README.md  package.json
napi/npm/linux-x64-gnu/: README.md  package.json
napi/npm/linux-x64-musl/: README.md  package.json
napi/npm/win32-arm64-msvc/: README.md  package.json
napi/npm/win32-x64-msvc/: README.md  package.json
napi/src/: lib.rs
quality/: sig-audit.md
scripts/: benchmark-comparison.sh  compare-istanbul.mjs  istanbul-diff.mjs  real-world-parity.mjs  sync-npm-versions.sh
src/: instrument.rs  lib.rs  pragma.rs  transform.rs  types.rs  visitor.rs
tests/: benchmark_test.rs  conformance_suite_test.rs  conformance_test.rs  integration_test.rs  real_world_test.rs  snapshot_test.rs
tests/conformance/: generate-reference.mjs  istanbul-diff-baseline.txt
tests/conformance/fixtures/: 01-function-declaration.js  02-function-expression.js  03-arrow-expression.js  04-arrow-block.js  05-class-methods.js  06-if-else.js  07-if-no-else.js  08-ternary.js  09-switch-cases.js  10-logical-and.js  11-logical-or.js  12-logical-chain.js  13-nullish-coalescing.js  14-nested-if.js  15-multiple-functions.js  16-for-loop.js  17-for-of.js  18-while-loop.js  19-do-while.js  20-default-params.js  21-try-catch.js  22-complex-mixed.js  24-nested-functions.js  25-variable-declarations.js  26-non-ascii-identifiers.js
tests/conformance/reference/: 01-function-declaration.json  02-function-expression.json  03-arrow-expression.json  04-arrow-block.json  05-class-methods.json  06-if-else.json  07-if-no-else.json  08-ternary.json  09-switch-cases.json  10-logical-and.json  11-logical-or.json  12-logical-chain.json  13-nullish-coalescing.json  14-nested-if.json  15-multiple-functions.json  16-for-loop.json  17-for-of.json  18-while-loop.json  19-do-while.json  20-default-params.json  21-try-catch.json  22-complex-mixed.json  23-empty-function.json  24-nested-functions.json  25-variable-declarations.json  26-non-ascii-identifiers.json
tests/fixtures/: edge-cases.js  large-module.js  medium-app.js  pragmas.js  react-hooks.jsx  typescript-advanced.ts  while-loops.js
tests/snapshots/: snapshot_test__arrow_expression_body_code.snap  snapshot_test__arrow_function_coverage_map.snap  snapshot_test__class_coverage_map.snap  snapshot_test__comprehensive_example_code.snap  snapshot_test__comprehensive_example_coverage_map.snap  snapshot_test__for_loop_coverage_map.snap  snapshot_test__if_else_code.snap  snapshot_test__if_else_coverage_map.snap  snapshot_test__logical_expression_code.snap  snapshot_test__logical_expression_coverage_map.snap  snapshot_test__nullish_coalescing_coverage_map.snap  snapshot_test__simple_function_code.snap  snapshot_test__simple_function_coverage_map.snap  snapshot_test__switch_coverage_map.snap  snapshot_test__ternary_code.snap
