[package]
name = "oxc_coverage_instrument_napi"
version = "0.2.0"
edition = "2024"
description = "Node.js bindings for oxc-coverage-instrument"
license = "MIT"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
oxc_coverage_instrument = { path = ".." }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
